--- a/notebooks/lm_training.ipynb
+++ b/notebooks/lm_training.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# with open('/content/drive/My Drive/foo.txt', 'w') as f:\n",
+    "#   f.write('Hello Google Drive!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_test_split"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
