--- a/notebooks/lm_training.ipynb
+++ b/notebooks/lm_training.ipynb
@@ -177,7 +177,7 @@
     "from typing import List\n",
     "\n",
     "\n",
-    "def tokenize_examples(examples: List[Dict[str, str]]):\n",
+    "def tokenize_examples(example: Dict[str, str]):\n",
     "    # YOUR CODE HERE\n",
     "    ...\n",
     "    \n",
