--- a/notebooks/lm_training.ipynb
+++ b/notebooks/lm_training.ipynb
@@ -6,18 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
-    "# with open('/content/drive/My Drive/foo.txt', 'w') as f:\n",
-    "#   f.write('Hello Google Drive!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# train_test_split"
    ]
   },
@@ -61,7 +49,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = ... # YOUR CODE HERE"
+    "data = load_dataset('csv', \n",
+    "    data_files={\n",
+    "        'train': (PATH_TO_DATA / 'train.csv').as_posix(),\n",
+    "        'test': (PATH_TO_DATA / 'test.csv').as_posix(),\n",
+    "    })"
    ]
   },
   {
@@ -80,15 +72,6 @@
    "outputs": [],
    "source": [
     "data['train']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['context_3']"
    ]
   },
   {
@@ -126,10 +109,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оставим только те примеры, где context_1 не пустой"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = ...  # YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Приводим каждый пример из датасета к виду одной строки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.8.10 ('.venv': poetry)' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/Users/d.tsimerman/blowjob/pycon-chit-chat/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from typing import Dict\n",
     "\n",
@@ -145,8 +162,29 @@
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
     "    ...\n",
-    "    \n",
     "\n",
+    "assert convert_to_dialog(\n",
+    "    {\n",
+    "        'context_3': 'привет',\n",
+    "        'context_2': 'привет!',\n",
+    "        'context_1': 'как дела?',\n",
+    "        'response': 'супер)'\n",
+    "    }\n",
+    ") == {'text': '@@ПЕРВЫЙ@@ привет @@ВТОРОЙ@@ привет! @@ПЕРВЫЙ@@ как дела? @@ВТОРОЙ@@ супер)'}\n",
+    "assert convert_to_dialog(\n",
+    "    {\n",
+    "        'context_1': 'как дела?',\n",
+    "        'response': 'супер)'\n",
+    "    }\n",
+    ") == {'text': '@@ПЕРВЫЙ@@ как дела? @@ВТОРОЙ@@ супер)'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = ...  # YOUR CODE HERE"
    ]
   },
@@ -154,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Теперь датасет необходимо токенизировать."
+    "Теперь датасет необходимо токенизировать, точно также как мы это делали при знакомстве с хаггинфейс"
    ]
   },
   {
@@ -177,19 +215,9 @@
     "from typing import List\n",
     "\n",
     "\n",
-    "def tokenize_examples(example: Dict[str, str]):\n",
+    "def tokenize_example(example: Dict[str, str]):\n",
     "    # YOUR CODE HERE\n",
-    "    ...\n",
-    "    \n",
-    "    \n",
-    "data = ...  # YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Предобработанный датасет можно сохранить на диск для быстрого использования при обучении"
+    "    ..."
    ]
   },
   {
@@ -198,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE "
+    "data = ...  # YOUR CODE HERE"
    ]
   },
   {
@@ -206,24 +234,6 @@
    "metadata": {},
    "source": [
     "### Обучение"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Прочитаем только что обработанный датасет с диска"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_from_disk\n",
-    "\n",
-    "data = ...  # YOUR CODE HERE"
    ]
   },
   {
@@ -239,18 +249,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "from transformers import AutoModelForCausalLM\n",
     "from transformers import Trainer, TrainingArguments\n",
     "from transformers import DataCollatorForLanguageModeling\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained('tinkoff-ai/ruDialoGPT-medium')"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = AutoModelForCausalLM.from_pretrained('tinkoff-ai/ruDialoGPT-medium').to(device)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Указываем основные параметры обучения и создаем класс Trainer"
+    "Указываем основные параметры обучения и создаем класс Trainer (https://huggingface.co/docs/transformers/main_classes/trainer#transformers.Trainer)"
    ]
   },
   {
@@ -261,8 +273,8 @@
    "source": [
     "arguments = {\n",
     "    'output_dir': './training_output',  # path to save the model's checkpoints\n",
-    "    'per_device_train_batch_size': 1,  # batch size per GPU/CPU for training\n",
-    "    'gradient_accumulation_steps': 1,  # number of batches to accumulate gradient\n",
+    "    'per_device_train_batch_size': 16,  # batch size per GPU/CPU for training\n",
+    "    'gradient_accumulation_steps': 4,  # number of batches to accumulate gradient\n",
     "    'max_steps': 500,  # total number of optimizer.step() calls\n",
     "    'save_steps': 100,  # save every save_steps\n",
     "    'eval_steps': 100,  # run evaluation every eval_steps\n",
@@ -288,11 +300,32 @@
    "source": [
     "# YOUR CODE HERE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Пробуем обученный чекпоинт"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelWithLMHead\n",
+    "\n",
+    "checkpoint_path = 'path/to/your/checkpoint-100'\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint_path)\n",
+    "model = AutoModelWithLMHead.from_pretrained(checkpoint_path)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -306,12 +339,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "161e7d925b7c2fb804bae6d551caef999e0f755b2572c03c29d1a6aab69c63dc"
+    "hash": "3ef03fb1679aeac65da8746bbb9907ec69320f4b4b60f937c1b2a3f31441eb01"
    }
   }
  },
