--- a/notebooks/lm_training.ipynb
+++ b/notebooks/lm_training.ipynb
@@ -19,8 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "from pathlib import Path\n",
     "from datasets import load_dataset"
    ]
@@ -179,9 +177,9 @@
     "CONTEXT_COLS = ['context_3', 'context_2', 'context_1']\n",
     "RESPONSE_COL = ['response']\n",
     "\n",
-    "def convert_to_dialog(example: Dict[str, str]) -> Dict[str, str]:\n",
+    "def convert_to_dialog(sample: Dict[str, str]) -> Dict[str, str]:\n",
     "    \"\"\"\n",
-    "        Convert example row to dialogs str format\n",
+    "        Convert sample row to dialogs str format\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
     "    ...\n",
@@ -238,7 +236,7 @@
     "from typing import List\n",
     "\n",
     "\n",
-    "def tokenize_example(example: Dict[str, str]):\n",
+    "def tokenize_sample(sample: Dict[str, str]):\n",
     "    # YOUR CODE HERE\n",
     "    ..."
    ]
