rm google colab

--- a/notebooks/huggingface_usage.ipynb
+++ b/notebooks/huggingface_usage.ipynb
@@ -1,20 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "leyX9GTLlnBO"
-      },
-      "outputs": [],
-      "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')\n",
-        "# with open('/content/drive/My Drive/foo.txt', 'w') as f:\n",
-        "#   f.write('Hello Google Drive!')"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "0CAhkLnUKdTO"
@@ -434,11 +420,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.10 ('.venv': poetry)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "3ef03fb1679aeac65da8746bbb9907ec69320f4b4b60f937c1b2a3f31441eb01"
+      }
     }
   },
   "nbformat": 4,
