--- a/notebooks/huggingface_usage.ipynb
+++ b/notebooks/huggingface_usage.ipynb
@@ -374,7 +374,7 @@
         "inputs = tokenizer('[CLS]привет[SEP]привет![SEP]как дела?[RESPONSE_TOKEN]норм, у тя как?', max_length=128, add_special_tokens=False, return_tensors='pt')\n",
         "with torch.inference_mode():\n",
         "    logits = model(**inputs).logits\n",
-        "    probas = torch.sigmoid(logits)[0].cpu().detach().numpy()\n",
+        "    probas = torch.softmax(logits)[0].cpu().detach().numpy()\n",
         "probas"
       ]
     },
@@ -425,7 +425,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
     "vscode": {
